--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ opencv-python==4.10.0.84
 platformdirs==4.3.6
 scenedetect==0.6.4
 tqdm==4.66.5
+decord
+transformers
+einops
+timm
+accelerate>=0.26.0
+sentencepiece
